# cacp

./: .dockerignore  .gitignore  .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml  tox.yml
cacp/: __init__.py  classifier.py  comparison.py  dataset.py  info.py  plot.py  result.py  run.py  time.py  util.py  wilcoxon.py  winner.py
cacp/gui/: main.py  preview.py
cacp/gui/assets/: dashAgGridComponentFunctions.js  datasets.csv  main.css  sidebar.js
cacp/gui/components/: keel_datasets_table.py  river_classifiers_table.py  river_datasets_table.py  sklearn_classifiers_table.py
cacp/gui/custom/: __init__.py
cacp/gui/db/: __init__.py  custom_classifiers.py  custom_datasets.py  custom_metrics.py  experiments.py
cacp/gui/pages/: classifier.py  classifiers.py  dataset.py  datasets.py  experiment.py  experiment_form.py  experiment_new.py  experiments.py  home.py  metric.py  metrics.py  new_experiment.py
cacp_examples/: classifiers.py  experiment.py  requirements.txt
cacp_examples/example_custom_classifiers/: xgboost.py
cacp_examples/example_custom_datasets/: iris.csv  local_csv_dataset.py  local_dataset.py  random_dataset.py
cacp_examples/example_custom_datasets/local_dataset/: iris-names.txt
cacp_examples/example_result/: comparison.csv  comparison_result.csv  comparison_result.tex
cacp_examples/example_result/info/: classifiers.csv  classifiers.tex  datasets.tex
cacp_examples/example_result/plot/: comparison_accuracy_per_dataset.eps  comparison_accuracy_per_fold.eps  comparison_auc_per_dataset.eps  comparison_auc_per_fold.eps  comparison_f1_per_dataset.eps  comparison_f1_per_fold.eps  comparison_precision_per_dataset.eps  comparison_precision_per_fold.eps  (+2 more)
cacp_examples_incremental/: experiment.py  requirements.txt
cacp_examples_incremental/example_result/: comparison.csv  comparison_result.csv  comparison_result.tex
cacp_examples_simple/: experiment.py
cacp_examples_simple/example_result/: comparison.csv  comparison_result.csv  comparison_result.tex
docs/: Makefile  authors.rst  cacp.rst  conf.py  contributing.rst  example_results.rst  gui.rst  index.rst  installation.rst  make.bat  modules.rst  requirements.txt
tests/: __init__.py  conftest.py  test_comparison.py  test_dataset.py  test_info.py  test_plot.py  test_result.py  test_run.py  test_time.py  test_wilcoxon.py  test_winner.py
tests/golden_result/: comparison.csv  comparison_result.csv  comparison_result.tex
(+513 files in other folders)
