[tool.poetry]
name = "cacp"
version = "0.3.1"
description = ""
authors = [
    "Sylwester Czmil <sylwekczmil@gmail.com>",
    "Jacek Kluska <jacklu@prz.edu.pl>",
    "Anna Czmil <czmilanna@gmail.com>"
]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8.0,<3.12"
dash = "^2.10.2"
dash-bootstrap-components = "^1.4.1"
dash-rjsf = "^0.0.4"
dash-ag-grid = "^2.1.0"
Jinja2 = "^3.0.3"
joblib = "^1.1.0"
matplotlib = "^3.3.4"
numpy = "^1.21.6"
pandas = "^1.3.5"
pydantic = "^1.10.9"
river = "^0.11.1"
scikit-learn = "^1.0.2"
tqdm = "^4.62.3"
typing-extensions = "^4.1.1"

[tool.poetry.dev-dependencies]
insegel = "^1.3.1"
pytest = "^7.1.2"
Sphinx = "^4.5.0"
tox = "^3.25.0"
flake8 = "^4.0.1"

[tool.poetry.scripts]
cacp = "cacp.gui.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
