[tool.poetry]
name = "cacp"
version = "1.0.3"
description = ""
authors = [
    "Sylwester Czmil <sylwekczmil@gmail.com>",
    "Jacek Kluska <jacklu@prz.edu.pl>",
    "Anna Czmil <czmilanna@gmail.com>"
]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"
dash = {version = "^2.13.0", extras = ["diskcache"]}
dash-bootstrap-components = "^1.5.0"
dash-rjsf = "^0.0.4"
dash-ag-grid = "^2.3.0"
dash-ace = "^0.2.1"
Jinja2 = "^3.1.2"
joblib = "^1.3.2"
matplotlib = "^3.8.0"
numpy = "^1.25.2"
pandas = "^1.5.3"
pydantic = "^1.10.12"
river = "^0.19.0"
scikit-learn = "^1.3.0"
tinydb = "^4.8.0"
tqdm = "^4.66.1"
typing-extensions = "^4.7.1"

[tool.poetry.dev-dependencies]
insegel = "^1.3.1"
pytest = "^7.1.2"
Sphinx = "^4.5.0"
tox = "^3.25.0"
flake8 = "^4.0.1"

[tool.poetry.scripts]
cacp = "cacp.gui.main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
